--- a/src/main/java/com/asf/wicket/pivot/web/PivotAreaPanel$AggregatorPanel.html
+++ b/src/main/java/com/asf/wicket/pivot/web/PivotAreaPanel$AggregatorPanel.html
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns:wicket="http://wicket.apache.org/">
 <wicket:panel>
-    <select wicket:id="aggregator"></select>
-    <a wicket:id="ok" href="#" class="btn btn-primary">Ok</a>
+    <form class="form-inline">
+        <label>Function</label>
+        <select wicket:id="aggregator" class="input-small"></select>
+        <a wicket:id="ok" href="#" class="btn btn-primary">Ok</a>
+    </form>
 </wicket:panel>
 </html>
