--- a/src/main/java/ro/fortsoft/wicket/pivot/web/PivotTable.html
+++ b/src/main/java/ro/fortsoft/wicket/pivot/web/PivotTable.html
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:wicket="http://wicket.apache.org/">
 <wicket:panel>
     <thead>
         <tr wicket:id="header">
@@ -18,3 +20,4 @@
         </tr>
     </tbody>
 </wicket:panel>
+</html>
