added autoCompute checkbox (auto refresh pivot table on AreaChangedEvent); in auto mode "Show pivot" button is hidden

--- a/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/PivotPanel.html
+++ b/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/PivotPanel.html
@@ -14,6 +14,10 @@
 		          <label class="checkbox">
 		              <input wicket:id="showGrandTotalForRow" type="checkbox"> Show grand total for row
 		          </label>
+		          &nbsp;&nbsp;&nbsp;
+		          <label class="checkbox pull-right">
+		              <input wicket:id="autoCompute" type="checkbox"> Auto compute
+		          </label>
 		   </fieldset> 
 		</form>
 		
