a first implementation with colspan and rowspan

--- a/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/PivotTable.html
+++ b/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/PivotTable.html
@@ -11,11 +11,11 @@
     
     <tbody>    
         <tr wicket:id="row">
-            <td wicket:id="rowHeader" class="row"></td>
+            <th wicket:id="rowHeader" class="row"></th>
             <td wicket:id="value" class="data"></td>
         </tr>
         <tr wicket:id="grandTotalRow" class="grand-total">
-            <td wicket:id="rowHeader" class="row-header"></td>
+            <th wicket:id="rowHeader" class="row-header"></th>
             <td wicket:id="value" class="data"></td>
         </tr>
     </tbody>
