--- a/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/PivotPanel.html
+++ b/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/PivotPanel.html
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns:wicket="http://wicket.apache.org/">
-	<wicket:panel>
-		<div wicket:id="areas" class="areas">
-		   <div wicket:id="area" class="row-fluid area"></div>
-		</div>
-		
-		<form class="form-inline">
-		   <fieldset>
-		          <label class="checkbox">
-		              <input wicket:id="showGrandTotalForColumn" type="checkbox"> Show grand total for column
-		          </label>
-		          &nbsp;&nbsp;&nbsp;
-		          <label class="checkbox">
-		              <input wicket:id="showGrandTotalForRow" type="checkbox"> Show grand total for row
-		          </label>
-		          &nbsp;&nbsp;&nbsp;
-		          <label class="checkbox pull-right">
-		              <input wicket:id="autoCompute" type="checkbox"> Auto compute
-		          </label>
-		   </fieldset> 
-		</form>
-		
-		<a wicket:id="compute" href="#" class="btn">Show pivot</a>
-			    
-		<div class="row-fluid" style="overflow-x: auto;">    
-		   <table wicket:id="pivotTable" class="pivot table table-striped table-bordered table-condensed"></table>
-	    </div>
-    </wicket:panel>
+<wicket:panel>
+	<div wicket:id="areas" class="areas">
+	   <div wicket:id="area" class="row-fluid area"></div>
+	</div>
+	
+	<form class="form-inline">
+	   <fieldset>
+	          <label class="checkbox">
+	              <input wicket:id="showGrandTotalForColumn" type="checkbox"> Show grand total for column
+	          </label>
+	          &nbsp;&nbsp;&nbsp;
+	          <label class="checkbox">
+	              <input wicket:id="showGrandTotalForRow" type="checkbox"> Show grand total for row
+	          </label>
+	          &nbsp;&nbsp;&nbsp;
+	          <label class="checkbox pull-right">
+	              <input wicket:id="autoCalculate" type="checkbox"> Auto calculate
+	          </label>
+	   </fieldset> 
+	</form>
+	
+	<a wicket:id="compute" href="#" class="btn">Show pivot</a>
+		    
+	<div class="row-fluid" style="overflow-x: auto;">    
+ 		<table wicket:id="pivotTable" class="pivot table table-striped table-bordered table-condensed"></table>
+ 	</div> 	
+</wicket:panel>
 </html>
