Download as CSV button integrated into the Panel-UI

--- a/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/PivotPanel.html
+++ b/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/PivotPanel.html
@@ -26,5 +26,7 @@
 	<div class="row-fluid" style="overflow-x: auto;">    
  		<table wicket:id="pivotTable" class="pivot table table-striped table-bordered table-condensed"></table>
  	</div> 	
+ 	
+ 	<a wicket:id='downloadCSV' href='#' class='btn' target='pivotTableDownload'>Download as CSV</a>
 </wicket:panel>
 </html>
