Refactored the exporters into plugins; Currently only the CSV plugin exists, and is selected by default.

--- a/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/PivotPanel.html
+++ b/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/PivotPanel.html
@@ -27,6 +27,6 @@
  		<table wicket:id="pivotTable" class="pivot table table-striped table-bordered table-condensed"></table>
  	</div> 	
  	
- 	<a wicket:id='downloadCSV' href='#' class='btn' target='pivotTableDownload'>Download as CSV</a>
+ 	<a wicket:id='downloadExport' href='#' class='btn' target='pivotTableDownload'><span wicket:id='label'>Download as CSV</span></a>
 </wicket:panel>
 </html>
