--- a/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/FieldCalculationPanel.html
+++ b/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/FieldCalculationPanel.html
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns:wicket="http://wicket.apache.org/">
 <wicket:panel>
-    <form class="form-inline">
+    <form class="form-inline" style="width:200px;" onsubmit="return false;">
+		<label>Title</label>
+        <input wicket:id='title' class="input-small"/><br/>
         <label>Function</label>
-        <select wicket:id="fieldCalcluation" class="input-small"></select>
-        <select wicket:id="fieldA" class="input-small"></select>
-        <select wicket:id="fieldB" class="input-small"></select>
+        <select wicket:id="fieldCalcluation" class="input-small"></select><br/>
+        <label>Field A</label>
+        <select wicket:id="fieldA" class="input-small"></select><br/>
+        <label>Field B</label>
+        <select wicket:id="fieldB" class="input-small"></select><br/>
         <a wicket:id="ok" href="#" class="btn btn-primary">Ok</a>
     </form>
 </wicket:panel>
